--- a/HTML/main.html
+++ b/HTML/main.html
@@ -6,12 +6,12 @@
     <title>MainPage</title>
     <link rel="stylesheet" href="./CSS/comCss.css">
     <link rel="stylesheet" href="./CSS/mainCss.css">
-    <link rel="stylesheet" href="./CSS/tampleteCss.css">
+    <link rel="stylesheet" href="./CSS/templeteCss.css">
 </head>
 
 <body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type = "text/javascript" src = "tamplete.js"></script>
+    <script type = "text/javascript" src = "templete.js"></script>
     <div id="header"></div>
     <div id="sideBar"></div>
     <main>
