메인화면 이미지 alt문구 추가

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -23,8 +23,8 @@
             <p>자전거 국토종주 관련 정보 공유 카페입니다.</p>
         </div>
         <div id="cafeImg">
-            <img src="./CSS/images/국토종주.JPG" id="map">
-            <img src="./CSS/images/국토종주2.JPG" id="img1">
+            <img src="./CSS/images/국토종주.JPG" id="map" alt="국토종주 사진">
+            <img src="./CSS/images/국토종주2.JPG" id="img1" alt="자전거 사진">
         </div>
         <br>
         <div id="tableList">
