사이드바 css 수정 및 게시판 상세 페이지 input옆 타이틀 추가

--- a/HTML/boardDetail.html
+++ b/HTML/boardDetail.html
@@ -16,8 +16,8 @@
     <div id="sideBar"></div>
     <main>
         <div id="boardDetail">
-            <input type="text" readonly value="문경지나면 할만하다며">
-            <input type="text" readonly value="초보21">
+            제목 : <input type="text" readonly value="문경지나면 할만하다며">
+            작성자 :<input type="text" readonly value="초보21">
         </div>
         <br>
         <div id="boardDetailText">
