메인 페이지 무료 이미지로 변경

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -30,8 +30,8 @@
 
         <!-- 이미지 영역 -->
         <div id="cafeImg">
-            <img src="./CSS/images/국토종주.JPG" id="map" alt="국토종주 지도">
-            <img src="./CSS/images/국토종주2.JPG" id="img1" alt="자전거 사진">
+            <img src="./CSS/images/mountain-bike-55368_640.jpg" id="map" alt="자전거 사진">
+            <img src="./CSS/images/to-go-biking-5178398_640.jpg" id="img1" alt="자전거 사진2">
         </div>
 
         <!-- 게시판 영역 -->
